--- a/src/public/app.html
+++ b/src/public/app.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<title>Rocket.Chat</title>
@@ -12,6 +13,7 @@
 		});
 	</script>
 </head>
+
 <body class="app-page app-page--loading">
 	<div class="sidebar sidebar--hidden">
 		<div class="sidebar__inner">
@@ -41,7 +43,7 @@
 				</header>
 				<div class="fields">
 					<div class="input-text active">
-						<input type="text" name="host" placeholder="https://open.rocket.chat" dir="auto">
+						<input type="text" name="host" placeholder="https://chat.gless.io" dir="auto">
 					</div>
 				</div>
 
@@ -50,7 +52,8 @@
 				<div class="connect__error alert alert-danger only-offline">Check connection</div>
 
 				<div class="submit">
-					<button type="submit" data-loading-text="Connecting..." class="button primary login">Connect</button>
+					<button type="submit" data-loading-text="Connecting..."
+						class="button primary login">Connect</button>
 				</div>
 			</form>
 		</div>
@@ -58,4 +61,5 @@
 
 	<div class="drag-region"></div>
 </body>
+
 </html>
