Changed title to be Gless Chat

--- a/src/public/app.html
+++ b/src/public/app.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Security-Policy"
 		content="default-src * 'unsafe-inline' data: filesystem: about: blob: ws: wss:">
-	<title>Rocket.Chat</title>
+	<title>Gless Chat</title>
 	<link rel="stylesheet" href="../stylesheets/main.css" />
 </head>
 
