added option to change server

--- a/src/public/app.html
+++ b/src/public/app.html
@@ -117,7 +117,7 @@
 	<dialog class="update-dialog">
 		<div class="update-content">
 			<h1 class="update-title">New Update is Available</h1>
-			<p class="update-message">A new version of the Gless.Chat Desktop App is available!</p>
+			<p class="update-message">A new version of the Gless Chat Desktop App is available!</p>
 
 			<div class="update-info">
 				<div class="app-version current-version">
