--- a/src/public/app.html
+++ b/src/public/app.html
@@ -77,6 +77,10 @@
 			<div class="app-version">
 				Version <span class="version">%s</span>
 			</div>
+			<div style="font-size: 10px; text-align: center;margin-top: 1rem;">
+				Program message icon made by Freepik from www.flaticon.com
+			</div>
+
 		</section>
 
 		<section class="updates hidden">
