fixed minor issues

--- a/src/public/app.html
+++ b/src/public/app.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 
-				<div class="add-server-error-message hidden alert alert-danger"></div>
+				<div class="add-server-error-message hidden alert alert-danger">Oops! Wrong address?</div>
 
 				<div class="add-server-offline-error alert alert-danger only-offline">Check connection</div>
 
