--- a/src/public/app.html
+++ b/src/public/app.html
@@ -40,7 +40,7 @@
 				</header>
 				<div class="fields">
 					<div class="input-text active">
-						<input class="add-server-input" type="text" placeholder="https://chat.gless.io" dir="auto">
+						<input class="add-server-input" type="text" placeholder="chat.xxxx.xx" dir="auto">
 					</div>
 				</div>
 
